changed icon paths

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIMPS SMP Geoguessr</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://bouncingelf10.github.io/SIMPS-SMP-Geoguessr/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://bouncingelf10.github.io/SIMPS-SMP-Geoguessr/favicon/favicon-16x16.png">
     <link rel="manifest" href="https://bouncingelf10.github.io/SIMPS-SMP-Geoguessr/favicon/site.webmanifest">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
    
