--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://bouncingelf10.github.io/SIMPS-SMP-Geoguessr/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://bouncingelf10.github.io/SIMPS-SMP-Geoguessr/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://bouncingelf10.github.io/SIMPS-SMP-Geoguessr/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://bouncingelf10.github.io/SIMPS-SMP-Geoguessr/favicon/site.webmanifest">
+    <link rel="manifest" href="/favicon/site.webmanifest" crossorigin="use-credentials">
+	
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
