added rudimentary mobile support

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest" crossorigin="use-credentials">
-	
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +25,7 @@
         <div class="start-menu-content">
             <h1>Welcome to SIMPS SMP Geoguessr</h1>
             <p>Developed by: <a href="https://www.youtube.com/@BouncingElf10" target="_blank">BouncingElf10</a>  |  Images taken by: <a href="https://www.youtube.com/@tj_giggles" target="_blank">TJ_Giggles</a></p>
+			<h2>This game is best experienced on a desktop, but if you're using a mobile device, I recommend switching to landscape mode for the best gameplay experience.</h2>
             <button class="start-game-button" id="start-game-button">Start Game</button>
         </div>
     </div>
